Mise a jour de l'arborescence

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <div>
         <a style="color: azure; text-decoration: none; font-size: xx-large;" href="./pages/card-game.html">Jeux de Carte</a>
     </div>
-    
+    <script src="./assets/js/general.js"></script>
 </body>
 </html>
