--- a/pages/card-game.html
+++ b/pages/card-game.html
@@ -26,7 +26,7 @@
         </ul>
     </div>
 </section>
-    <script src="../assets/js/script.js"></script>
+    <script src="../assets/js/card-game.js"></script>
 </body>
 </html>
 
