--- a/index.html
+++ b/index.html
@@ -4,14 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/index.css">
 
     <title>SUPER MARIO BROS 3</title>
 </head>
-<body style="background-color: #111111;">
-    <div>
-        <a style="color: azure; text-decoration: none; font-size: xx-large;" href="./pages/card-game.html">Jeux de Carte</a>
-    </div>
-    <script src="./assets/js/general.js"></script>
+<body>
+    <header>
+        <h1>Mini jeu</h1>
+    </header>
+    <section>
+
+        <nav>
+            <ul>
+                <li>
+                    <a id="card-game" href="./pages/card-game.html">Mario Card Game</a>
+                </li>
+            </ul>
+        </nav>
+
+        <footer>
+
+        </footer>
+    </section>
+    <script src="./assets/js/index.js"></script>
 </body>
 </html>
